@@ -217,3 +217,7 @@ void material::Initialize(ushort NewConfig, ulong InitVolume, bool Load)
     }
 }
 
+ulong material::GetTotalNutritionValue(const item* What) const
+{ 
+  return GetNutritionValue() * GetWeight() * What->GetNPModifier() / 500000000; 
+}
